# stringtime-bellworks

./: CMakeLists.txt  README.md  TODO.md
Source/: ModalVoice.cpp  ModalVoice.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
presets/: 10,000 cellos.ms2preset  90s news.ms2preset  Carosel.ms2preset  Distant echos.ms2preset  Impressive Brass.ms2preset  Init Patch.ms2preset  Moving Chords.ms2preset  Old Radio Chimes.ms2preset  Ominous Gong.ms2preset  Range Organ.ms2preset  Rusty strings.ms2preset  Spocks Beard.ms2preset  Spooky Orchestra.ms2preset  barking choir.ms2preset  chime choir.ms2preset  chime delay.ms2preset  chimes with background.ms2preset  fizzy chimes.ms2preset  flutelike.ms2preset  great scott cathedral.ms2preset  harsh  clang.ms2preset  homemade bells.ms2preset  impressive pad.ms2preset  large gong.ms2preset  low strings.ms2preset  low throbbing.ms2preset  messed up piano.ms2preset  nice chime.ms2preset  nice spacy hit.ms2preset  nice warm pad.ms2preset  pulsar pulse.ms2preset  slow orchestra.ms2preset  soundtrack thrum.ms2preset  spooky tremolo.ms2preset  weird mellow.ms2preset  wind chimes.ms2preset
